dockerfile created, running on 8050 localhost.

--- a/todo
+++ b/todo
@@ -53,3 +53,14 @@ Zeilen:
 
 Grafisch:
 - Header einfärben: Minima blau, Maxima rot
+
+
+Grafik zeigt zu beginn alle linien an
+
+rest funktional
+
+kein spinner beim laden allerdings keine lange dauer
+
+docker file
+
+
